Change to gradle build and add spring security so templates are showing now

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,9 +14,9 @@
                 your home screen.
             </p>
             <h3>
-                <a class="nav-link" th:href="@{/login}">Login</a>
+                <a class="nav-link" th:href="@{/users/login}">Login</a>
                 to see check them out or
-                <a class="nav-link" th:href="@{/register}">Register</a>
+                <a class="nav-link" th:href="@{/users/register}">Register</a>
                 now to create your own program.
             </h3>
         </section>
