--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -13,15 +13,15 @@
 <header>
     <nav>
         <div class="home">
-            <a href="index">My gym helper</a>
+            <a href="/">My gym helper</a>
         </div>
         <div class="links">
             <ul>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/add-workout}">Add workout</a>
+                <a class="nav-link" th:href="@{/users/add-workout}">Add workout</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/add-diet}">Add diet</a>
+                <a class="nav-link" th:href="@{/users/add-diet}">Add diet</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/workouts}">Workouts</a>
@@ -30,17 +30,17 @@
                 <a class="nav-link" th:href="@{/diets}">Diets</a>
             </li>
             <li class="nav-item">
-                <form method="get" th:action="@{/login}">
+                <form method="get" th:action="@{/users/login}">
                 <button type="submit" class="btn" >Login</button>
                 </form>
             </li>
             <li class="nav-item">
-                <form method="get" th:action="@{/register}">
+                <form method="get" th:action="@{/users/register}">
                 <button type="submit" class="btn" >Register</button>
                 </form>
             </li>
             <li class="nav-item">
-                <form method="GET" th:action="@{/logout}">
+                <form method="GET" th:action="@{/users/logout}">
                     <button class="btn" type="submit">
                         Logout
                     </button>
