--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 <header th:replace="fragments/commons::nav"></header>
 <main>
     <form class="form"
-          th:action="@{/login}"
+          th:action="@{/users/login}"
           th:method="POST"
           th:object="${loginData}"
     >
